--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="application-name" content="CANASTRA Web App 2" />
+    <meta name="apple-mobile-web-app-title" content="CANASTRA_2" />
+
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Canastra</title>
+    <title>Canastra 2</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
